added junits test cases and fixed sonar issues